# Thor_notebook

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/inputs/: thor_inputs.csv
notebooks/: 00_inputs.py  00_mission_conops.py  01_mass_budget.py  02_delta_v_budget.py  03_power_energy_budget.py  04_link_budget.py  10_orbit_design.py  12_rendezvous_phasing.py  13_proximity_ops_docking.py  14_deorbit_targeting.py  20_atmosphere_model.py  21_entry_trajectory_3dof.py  22_aeroheating.py  23_tps_sizing.py  24_hypersonic_aero.py  30_aero_database.py  31_stability_trim.py  32_control_surfaces.py  33_terminal_descent.py  40_main_propulsion.py  41_rcs_sizing.py  42_propellant_tanks.py  50_mass_properties.py  51_attitude_dynamics_6dof.py  52_attitude_control.py  53_navigation_filters.py  60_loads_environments.py  61_primary_structure.py  62_thermostructural.py  70_thermal_control.py  71_power_system.py  80_oml_parametric.py  81_packaging_payload.py  90_mdao_sizing_loop.py  91_trade_studies.py
scripts/: marimo.sh  smoke_pipeline.sh  validate_pipeline.py
thor/: __init__.py  constants.py
thor/io/: __init__.py  handoff.py  inputs.py
thor/models/: __init__.py  mission_spec.py  vehicle_state.py
thor/physics/: aero.py  astro.py  atmosphere.py  entry.py  propulsion.py
