[project]
name = "thor-notebook"
version = "0.1.0"
description = "Pipeline de cálculo THOR — Actical Hypersonic Orbital Reentry (Marimo + Polars)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.9.0",
    "polars>=1.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "duckdb>=1.0",
]

[project.optional-dependencies]
astro = ["poliastro>=0.17", "astropy>=6.0"]
prop = ["cantera>=3.0"]

[tool.marimo]
format = "script"

[tool.setuptools.packages.find]
include = ["thor*"]
exclude = ["notebooks*"]
